--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     ],
     "license": ["OFL-1.1", "MIT"],
     "ignore": [
-        "*.md"
+        "*.md",
+        "*.json"
     ],
     "keywords": [
         "material",
