Ignore .html in bower, added preview.html

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "license": ["OFL-1.1", "MIT"],
     "ignore": [
         "*.md",
-        "*.json"
+        "*.json",
+        "*.html"
     ],
     "keywords": [
         "material",
