--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
     "name": "mdi",
-    "version": "0.9.22-alpha",
+    "version": "0.9.72-alpha",
     "main": [ 
         "materialdesignicons.css",
         "fonts/*",
         "css/*",
         "scss/*",
+        "package.json",
         "preview.html"
     ],
     "homepage": "http://materialdesignicons.com",
