--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "mdi",
-    "version": "1.0.62-beta",
+    "version": "1.1.34",
     "main": [
         "css/materialdesignicons.css",
         "fonts/*",
