Added style in package.json to enable import
Added style in package.json to enable import with tools like postcss-import.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.57",
   "description": "Dist for Material Design Webfont. This includes the Stock and Community icons in a single webfont collection.",
   "main": "preview.html",
+  "style": "css/materialdesignicons.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
