Changing the bower.json to prepare for sass version

--- a/bower.json
+++ b/bower.json
@@ -1,29 +1,32 @@
 {
-    "name": "mdi",
+    "name": "mdi-scss",
     "version": "1.6.50",
     "main": [
-        "css/materialdesignicons.css",
-        "fonts/*",
-        "css/*",
-        "scss/_variables.scss",
-        "scss/*",
-        "package.json",
-        "preview.html"
+        "scss/materialdesignicons.scss"
     ],
     "homepage": "http://materialdesignicons.com",
     "authors": [
         { "name": "Austin Andrews", "homepage": "http://templarian.com" },
         { "name": "Google", "homepage": "http://www.google.com/design" }
     ],
-    "license": ["OFL-1.1", "MIT"],
+    "license": [
+        "OFL-1.1",
+        "MIT"
+    ],
     "ignore": [
         "*.md",
-        "*.json"
+        "*.json",
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
     ],
     "keywords": [
         "material",
         "design",
         "icons",
         "webfont"
-    ]
+    ],
+    "description": ""
 }
