Removing CSS folder and change version

--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,41 @@
 {
-    "name": "mdi-scss",
-    "version": "1.6.50",
-    "main": [
-        "scss/materialdesignicons.scss"
-    ],
-    "homepage": "http://materialdesignicons.com",
-    "authors": [
-        { "name": "Austin Andrews", "homepage": "http://templarian.com" },
-        { "name": "Google", "homepage": "http://www.google.com/design" }
-    ],
-    "license": [
-        "OFL-1.1",
-        "MIT"
-    ],
-    "ignore": [
-        "*.md",
-        "*.json",
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "keywords": [
-        "material",
-        "design",
-        "icons",
-        "webfont"
-    ],
-    "description": ""
+  "name": "mdi-scss",
+  "version": "1.6.52",
+  "main": [
+    "scss/materialdesignicons.scss"
+  ],
+  "homepage": "http://materialdesignicons.com",
+  "authors": [
+    {
+      "name": "Austin Andrews",
+      "homepage": "http://templarian.com"
+    },
+    {
+      "name": "Google",
+      "homepage": "http://www.google.com/design"
+    }
+  ],
+  "license": [
+    "OFL-1.1",
+    "MIT"
+  ],
+  "ignore": [
+    "*.md",
+    "*.json",
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "keywords": [
+    "material",
+    "design",
+    "icons",
+    "webfont"
+  ],
+  "description": "",
+  "dependencies": {
+    "mdi": "mdi-scss#^1.6.52"
+  }
 }
