--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mdi",
+  "name": "@mdi/font",
   "version": "2.2.43",
   "description": "Dist for Material Design Webfont. This includes the Stock and Community icons in a single webfont collection.",
   "style": "css/materialdesignicons.css",
