--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "@mdi/font",
-  "version": "2.4.85",
-  "description": "Dist for Material Design Webfont. This includes the Stock and Community icons in a single webfont collection.",
-  "style": "css/materialdesignicons.css",
+  "name": "andes-font",
+  "version": "1.0.0",
+  "description": "Andes WebFont for any helth application",
+  "style": "css/andes-font.css",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run css && npm run css-min",
+    "css": "node-sass --source-map true --include-path scss scss/materialdesignicons.scss css/andes-font.css",
+    "css-min": "node-sass --source-map true --include-path scss scss/materialdesignicons.scss css/andes-font.min.css --output-style compressed"
+    
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Templarian/MaterialDesign-Webfont.git"
+    "url": "https://github.com/liquid36/andes-font.git"
   },
   "keywords": [
     "material",
@@ -31,7 +34,10 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/Templarian/MaterialDesign/issues"
+    "url": "https://github.com/liquid36/andes-font/issues"
   },
-  "homepage": "http://materialdesignicons.com"
+  "homepage": "http://materialdesignicons.com",
+  "devDependencies": {
+    "node-sass": "^4.9.0"
+  }
 }
