--- a/package.json
+++ b/package.json
@@ -20,16 +20,7 @@
     "name": "Austin Andrews",
     "web": "http://twitter.com/templarian"
   },
-  "licenses": [
-    {
-      "type": "OFL-1.1",
-      "url": "http://scripts.sil.org/OFL"
-    },
-    {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/mit-license.html"
-    }
-  ],
+  "license": "(OFL-1.1 AND MIT)",
   "bugs": {
     "url": "https://github.com/Templarian/MaterialDesign/issues"
   },
