--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "@andes/icons",
-  "version": "0.7.2",
+  "version": "1.0.0",
   "description": "Andes WebFont Icons for any helth application",
   "style": "css/andes-icons.css",
   "scripts": {
-    "download": "node builder/index.js",
-    "build": "npm run css && npm run css-min",
+    "build": "node setup.js && npm run build:css",
+    "build:css": "npm run css && npm run css-min",
     "css": "node-sass --source-map true --include-path scss scss/andes-icons.scss css/andes-icons.css",
-    "css-min": "node-sass --source-map true --include-path scss scss/andes-icons.scss css/andes-icons.min.css --output-style compressed"
+    "css-min": "node-sass --source-map true --include-path scss scss/andes-icons.scss css/andes-icons.min.css --output-style compressed",
+    "fontello:server": "docker run --rm --name andes_fontello -d -p 3000:3000 avnerner/fontello_server",
+    "wait-for": "wait-on http://localhost:3000",
+    "fontello:open": "fontello-cli --config config.json --host http://localhost:3000 open",
+    "fontello:install": "fontello-cli --config config.json install --css ./css --font ./fonts",
+    "server": "npm run fontello:server && npm run wait-for && npm run fontello:open"
   },
   "repository": {
     "type": "git",
@@ -38,5 +43,10 @@
   "homepage": "https://www.andes.gob.ar",
   "devDependencies": {
     "node-sass": "^4.9.0"
+  },
+  "dependencies": {
+    "fontello-cli": "^0.5.0",
+    "rimraf": "^3.0.2",
+    "wait-on": "^5.0.0"
   }
 }
