--- a/docs/config.json
+++ b/docs/config.json
@@ -8433,6 +8433,34 @@
       "search": [
         "familia"
       ]
+    },
+    {
+      "uid": "cc8cc3c93746db0a85673210ca0c3ee6",
+      "css": "cloud-off-outline",
+      "code": 59499,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M322.1 416.7L655.4 750H250A166.7 166.7 0 0 1 83.3 583.3 166.7 166.7 0 0 1 250 416.7M125 219.6L239.6 333.3C106.7 339.6 0 448.7 0 583.3A250 250 0 0 0 250 833.3H738.8L822.1 916.7 875 863.8 177.9 166.7M806.3 417.9C777.9 274.6 651.7 166.7 500 166.7 437.5 166.7 381.3 184.6 333.3 215.4L393.7 276.3C425.4 259.6 461.7 250 500 250A229.2 229.2 0 0 1 729.2 479.2V500H791.7A125 125 0 0 1 916.7 625C916.7 672.1 890 712.9 851.7 734.2L912.1 794.6C965 756.7 1000 695 1000 625 1000 515 914.6 425.8 806.3 417.9Z",
+        "width": 1000
+      },
+      "search": [
+        "cloud-off-outline"
+      ]
+    },
+    {
+      "uid": "0ee3cd4d28628a00fd80d78e52d0af30",
+      "css": "cloud-check-outline",
+      "code": 59995,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M791.7 750H250C157.9 750 83.3 675.4 83.3 583.3S157.9 416.7 250 416.7H279.6C307.1 320.4 395.8 250 500 250 626.7 250 729.2 352.5 729.2 479.2V500H791.7C860.8 500 916.7 555.8 916.7 625S860.8 750 791.7 750M806.3 417.9C777.9 274.6 651.7 166.7 500 166.7 379.6 166.7 275 235 222.9 334.6 97.5 348.3 0 454.2 0 583.3 0 721.2 112.1 833.3 250 833.3H791.7C906.7 833.3 1000 740 1000 625 1000 515 914.6 425.8 806.3 417.9M416.7 708.3L270.8 562.5 329.6 503.3 416.7 590.4 607.9 399.6 666.7 458.3",
+        "width": 1000
+      },
+      "search": [
+        "cloud-check-outline"
+      ]
     }
   ]
 }
