feat(add): icons reply y hospital-building (legacy)

--- a/config.json
+++ b/config.json
@@ -7133,20 +7133,6 @@
       ]
     },
     {
-      "uid": "d0d3d39ff0ce552d0457c1a09df0bdba",
-      "css": "heart-1",
-      "code": 59902,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M500 888.7L439.5 834Q304.7 712.9 252 658.2 168 572.3 128.9 505.9 84 429.7 84 353.5 84 291 114.3 238.3T197.3 155.3 312.5 125Q367.2 125 416 148.4T500 210.9Q535.2 171.9 584 148.4T687.5 125Q750 125 802.7 155.3T885.7 238.3 916 353.5Q916 429.7 871.1 505.9 832 572.3 748 658.2 695.3 712.9 560.5 834Z",
-        "width": 1000
-      },
-      "search": [
-        "heart"
-      ]
-    },
-    {
       "uid": "daa0360fed595e3a3982c2d245c6e7ff",
       "css": "help",
       "code": 59903,
@@ -8460,6 +8446,216 @@
       },
       "search": [
         "cloud-check-outline"
+      ]
+    },
+    {
+      "uid": "6129e1bc0237bb65b94be0776c75aced",
+      "css": "selection",
+      "code": 59996,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M83.3 166.7C83.3 120.4 120.8 83.3 166.7 83.3H291.7V166.7H166.7V291.7H83.3V166.7M916.7 166.7V291.7H833.3V166.7H708.3V83.3H833.3A83.3 83.3 0 0 1 916.7 166.7M833.3 833.3V708.3H916.7V833.3C916.7 879.6 879.2 916.7 833.3 916.7H708.3V833.3H833.3M83.3 833.3V708.3H166.7V833.3H291.7V916.7H166.7A83.3 83.3 0 0 1 83.3 833.3M416.7 83.3H583.3V166.7H416.7V83.3M416.7 833.3H583.3V916.7H416.7V833.3M833.3 416.7H916.7V583.3H833.3V416.7M83.3 416.7H166.7V583.3H83.3V416.7Z",
+        "width": 1000
+      },
+      "search": [
+        "selection"
+      ]
+    },
+    {
+      "uid": "8f290172ca038564c86db01807b2a393",
+      "css": "view-day",
+      "code": 59997,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M83.3 125V250H875V125M833.3 333.3H125A41.7 41.7 0 0 0 83.3 375V625A41.7 41.7 0 0 0 125 666.7H833.3A41.7 41.7 0 0 0 875 625V375A41.7 41.7 0 0 0 833.3 333.3M83.3 875H875V750H83.3V875Z",
+        "width": 1000
+      },
+      "search": [
+        "view-day"
+      ]
+    },
+    {
+      "uid": "79766171222f913606a1ba67b81cb077",
+      "css": "numeric",
+      "code": 59998,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M166.7 708.3V375H83.3V291.7H250V708.3H166.7M916.7 625C916.7 671.2 879.2 708.3 833.3 708.3H666.7V625H833.3V541.7H750V458.3H833.3V375H666.7V291.7H833.3A83.3 83.3 0 0 1 916.7 375V437.5A62.5 62.5 0 0 1 854.2 500 62.5 62.5 0 0 1 916.7 562.5V625M583.3 625V708.3H333.3V541.7C333.3 495.4 370.8 458.3 416.7 458.3H500V375H333.3V291.7H500A83.3 83.3 0 0 1 583.3 375V458.3C583.3 504.6 545.8 541.7 500 541.7H416.7V625H583.3Z",
+        "width": 1000
+      },
+      "search": [
+        "numeric"
+      ]
+    },
+    {
+      "uid": "52217bbc810f83ba473bbad91c5a0312",
+      "css": "decimal",
+      "code": 59999,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M416.7 291.7A125 125 0 0 0 291.7 416.7V541.7A125 125 0 0 0 541.7 541.7V416.7A125 125 0 0 0 416.7 291.7M458.3 541.7A41.7 41.7 0 0 1 375 541.7V416.7A41.7 41.7 0 0 1 458.3 416.7M708.3 291.7A125 125 0 0 0 583.3 416.7V541.7A125 125 0 0 0 833.3 541.7V416.7A125 125 0 0 0 708.3 291.7M750 541.7A41.7 41.7 0 0 1 666.7 541.7V416.7A41.7 41.7 0 0 1 750 416.7M250 625A41.7 41.7 0 1 1 208.3 583.3 41.7 41.7 0 0 1 250 625Z",
+        "width": 1000
+      },
+      "search": [
+        "decimal"
+      ]
+    },
+    {
+      "uid": "4e33dfc6401e7d7a245a2887328b421c",
+      "css": "account-circle",
+      "code": 60000,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 800C395.8 800 303.8 746.7 250 666.7 251.3 583.3 416.7 537.5 500 537.5 583.3 537.5 748.7 583.3 750 666.7 696.3 746.7 604.2 800 500 800M500 208.3A125 125 0 0 1 625 333.3 125 125 0 0 1 500 458.3 125 125 0 0 1 375 333.3 125 125 0 0 1 500 208.3M500 83.3A416.7 416.7 0 0 0 83.3 500 416.7 416.7 0 0 0 500 916.7 416.7 416.7 0 0 0 916.7 500C916.7 269.6 729.2 83.3 500 83.3Z",
+        "width": 1000
+      },
+      "search": [
+        "account-circle"
+      ]
+    },
+    {
+      "uid": "fd344308102d0884f8d31bf9a3a22393",
+      "css": "dots-horizontal",
+      "code": 60001,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M666.7 500A83.3 83.3 0 0 1 750 416.7 83.3 83.3 0 0 1 833.3 500 83.3 83.3 0 0 1 750 583.3 83.3 83.3 0 0 1 666.7 500M416.7 500A83.3 83.3 0 0 1 500 416.7 83.3 83.3 0 0 1 583.3 500 83.3 83.3 0 0 1 500 583.3 83.3 83.3 0 0 1 416.7 500M166.7 500A83.3 83.3 0 0 1 250 416.7 83.3 83.3 0 0 1 333.3 500 83.3 83.3 0 0 1 250 583.3 83.3 83.3 0 0 1 166.7 500Z",
+        "width": 1000
+      },
+      "search": [
+        "dots-horizontal"
+      ]
+    },
+    {
+      "uid": "036fafb8910638e7f1a26011cb3ebe5b",
+      "css": "page-layout-header",
+      "code": 60002,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M250 83.3H750A83.3 83.3 0 0 1 833.3 166.7V833.3A83.3 83.3 0 0 1 750 916.7H250A83.3 83.3 0 0 1 166.7 833.3V166.7A83.3 83.3 0 0 1 250 83.3M250 166.7V333.3H750V166.7H250Z",
+        "width": 1000
+      },
+      "search": [
+        "page-layout-header"
+      ]
+    },
+    {
+      "uid": "9cac54e2d71d234ae7093225e311bf4b",
+      "css": "view-grid",
+      "code": 60003,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M125 458.3H458.3V125H125M125 875H458.3V541.7H125M541.7 875H875V541.7H541.7M541.7 125V458.3H875V125",
+        "width": 1000
+      },
+      "search": [
+        "view-grid"
+      ]
+    },
+    {
+      "uid": "96a362fc46000beeee88654d96d91aa6",
+      "css": "view-quilt",
+      "code": 60004,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M416.7 208.3V458.3H875V208.3M666.7 750H875V500H666.7M166.7 750H375V208.3H166.7M416.7 750H625V500H416.7V750Z",
+        "width": 1000
+      },
+      "search": [
+        "view-quilt"
+      ]
+    },
+    {
+      "uid": "b3fa436b0e3bd06263742c759e37d0df",
+      "css": "auto-fix",
+      "code": 60005,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M312.5 233.3L208.3 291.7 266.7 187.5 208.3 83.3 312.5 141.7 416.7 83.3 358.3 187.5 416.7 291.7 312.5 233.3M812.5 641.7L916.7 583.3 858.3 687.5 916.7 791.7 812.5 733.3 708.3 791.7 766.7 687.5 708.3 583.3 812.5 641.7M916.7 83.3L858.3 187.5 916.7 291.7 812.5 233.3 708.3 291.7 766.7 187.5 708.3 83.3 812.5 141.7 916.7 83.3M555.8 532.5L657.5 430.8 569.2 342.5 467.5 444.2 555.8 532.5M598.7 303.8L696.3 401.3C712.5 416.7 712.5 443.8 696.3 460L210 946.3C193.8 962.5 166.7 962.5 151.3 946.3L53.8 848.8C37.5 833.3 37.5 806.3 53.8 790L540 303.8C556.3 287.5 583.3 287.5 598.7 303.8Z",
+        "width": 1000
+      },
+      "search": [
+        "auto-fix"
+      ]
+    },
+    {
+      "uid": "81483505762b3358196199ec5e7fb2f8",
+      "css": "form-textbox",
+      "code": 60006,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M708.3 291.7H916.7V708.3H708.3V791.7A41.7 41.7 0 0 0 750 833.3H833.3V916.7H729.2C706.2 916.7 666.7 897.9 666.7 875 666.7 897.9 627.1 916.7 604.2 916.7H500V833.3H583.3A41.7 41.7 0 0 0 625 791.7V208.3A41.7 41.7 0 0 0 583.3 166.7H500V83.3H604.2C627.1 83.3 666.7 102.1 666.7 125 666.7 102.1 706.2 83.3 729.2 83.3H833.3V166.7H750A41.7 41.7 0 0 0 708.3 208.3V291.7M83.3 291.7H541.7V375H166.7V625H541.7V708.3H83.3V291.7M833.3 625V375H708.3V625H833.3Z",
+        "width": 1000
+      },
+      "search": [
+        "form-textbox"
+      ]
+    },
+    {
+      "uid": "332aca31538ae3f21831d615d38e0d75",
+      "css": "format-list-bulleted",
+      "code": 60007,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M291.7 208.3H875V291.7H291.7V208.3M291.7 541.7V458.3H875V541.7H291.7M166.7 187.5A62.5 62.5 0 0 1 229.2 250 62.5 62.5 0 0 1 166.7 312.5 62.5 62.5 0 0 1 104.2 250 62.5 62.5 0 0 1 166.7 187.5M166.7 437.5A62.5 62.5 0 0 1 229.2 500 62.5 62.5 0 0 1 166.7 562.5 62.5 62.5 0 0 1 104.2 500 62.5 62.5 0 0 1 166.7 437.5M291.7 791.7V708.3H875V791.7H291.7M166.7 687.5A62.5 62.5 0 0 1 229.2 750 62.5 62.5 0 0 1 166.7 812.5 62.5 62.5 0 0 1 104.2 750 62.5 62.5 0 0 1 166.7 687.5Z",
+        "width": 1000
+      },
+      "search": [
+        "format-list-bulleted"
+      ]
+    },
+    {
+      "uid": "f25f018ec3ed2366fbcdfbb39cb0617b",
+      "css": "clipboard-plus",
+      "code": 60008,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M791.7 125H617.5C600 76.7 554.2 41.7 500 41.7 445.8 41.7 400 76.7 382.5 125H208.3A83.3 83.3 0 0 0 125 208.3V791.7A83.3 83.3 0 0 0 208.3 875H791.7A83.3 83.3 0 0 0 875 791.7V208.3A83.3 83.3 0 0 0 791.7 125M500 125A41.7 41.7 0 0 1 541.7 166.7 41.7 41.7 0 0 1 500 208.3 41.7 41.7 0 0 1 458.3 166.7 41.7 41.7 0 0 1 500 125M541.7 500H666.7V583.3H541.7V708.3H458.3V583.3H333.3V500H458.3V375H541.7V500Z",
+        "width": 1000
+      },
+      "search": [
+        "clipboard-plus"
+      ]
+    },
+    {
+      "uid": "95cfca02678f4de054fead9313ff9a37",
+      "css": "reply",
+      "code": 60009,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M416.7 375V208.3L125 500 416.7 791.7V620.8C625 620.8 770.8 687.5 875 833.3 833.3 625 708.3 416.7 416.7 375Z",
+        "width": 1000
+      },
+      "search": [
+        "reply"
+      ]
+    },
+    {
+      "uid": "6a68c823fc53b8c65ceb33b7a08ae910",
+      "css": "hospital-building",
+      "code": 60010,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M83.3 916.7V291.7A41.7 41.7 0 0 1 125 250H291.7V83.3H708.3V250H875A41.7 41.7 0 0 1 916.7 291.7V916.7H583.3V708.3H416.7V916.7H83.3M375 166.7V416.7H458.3V333.3H541.7V416.7H625V166.7H541.7V250H458.3V166.7H375M166.7 833.3H333.3V708.3H166.7V833.3M166.7 625H333.3V500H166.7V625M666.7 833.3H833.3V708.3H666.7V833.3M666.7 625H833.3V500H666.7V625M416.7 625H583.3V500H416.7V625Z",
+        "width": 1000
+      },
+      "search": [
+        "hospital-building"
       ]
     }
   ]
