--- a/docs/config.json
+++ b/docs/config.json
@@ -8685,6 +8685,34 @@
       "search": [
         "fullscreen"
       ]
+    },
+    {
+      "uid": "285f028f1d33d145fae38eb577444655",
+      "css": "star-off-outline",
+      "code": 60012,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M920.8 895.8L100 70.8 45.8 125 287.5 366.7 83.3 383.3 312.5 583.3 245.8 875 504.2 720.8 762.5 875 750 825 870.8 945.8 920.8 895.8M658.3 737.5L500 641.7 341.7 737.5 383.3 558.3 245.8 437.5 350 429.2 658.3 737.5M466.7 333.3L416.7 283.3 500 83.3 616.7 358.3 916.7 383.3 704.2 566.7 658.3 520.8 758.3 437.5 575 420.8 504.2 254.2 466.7 333.3Z",
+        "width": 1000
+      },
+      "search": [
+        "star-off-outline"
+      ]
+    },
+    {
+      "uid": "1e27c93c1c2fffc511dd1e3ecb1ae94c",
+      "css": "star-off",
+      "code": 60013,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M866.7 945.8L745.8 825 758.3 875 500 720.8 241.7 875 308.3 583.3 83.3 383.3 287.5 366.7 45.8 125 100 70.8 920.8 891.7 866.7 945.8M916.7 383.3L616.7 358.3 500 83.3 416.7 283.3 704.2 570.8 916.7 383.3Z",
+        "width": 1000
+      },
+      "search": [
+        "star-off"
+      ]
     }
   ]
 }
