--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
   "homepage": "https://www.andes.gob.ar",
   "devDependencies": {
     "@mdi/font": "^5.3.45",
-    "node-sass": "^4.9.0"
+    "node-sass": "^4.14.1"
   },
   "dependencies": {
     "fontello-cli": "^0.5.0",
+    "latest-version": "^5.1.0",
     "rimraf": "^3.0.2",
     "wait-on": "^5.0.0"
   }
