--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Dist for Material Design Webfont. This includes the Stock and Community icons in a single webfont collection.",
   "style": "css/materialdesignicons.css",
   "scripts": {
+    "verify": "node scripts/verify.js",
+    "prepublish": "node scripts/verify.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
