feat: agregar icono file-cancel-outline

--- a/config.json
+++ b/config.json
@@ -8825,6 +8825,20 @@
       "search": [
         "respirador-cnbf"
       ]
+    },
+    {
+      "uid": "1249347f8386930ba52d128b4d53b6c9",
+      "css": "file-cancel-outline",
+      "code": 59667,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M583.3 83.3L833.3 333.3V833.3A83.3 83.3 0 0 1 750 916.7H250A83.3 83.3 0 0 1 166.7 833.3V166.7A83.3 83.3 0 0 1 250 83.3H583.3M750 833.3V375H541.7V166.7H250V833.3H750M479.2 416.7C583.3 416.7 666.7 500 666.7 604.2 666.7 708.3 583.3 791.7 479.2 791.7 375 791.7 291.7 708.3 291.7 604.2 291.7 500 375 416.7 479.2 416.7M479.2 479.2C455.8 479.2 434.2 485.4 416.7 496.7L586.7 666.7C597.9 649.2 604.2 627.5 604.2 604.2A125 125 0 0 0 479.2 479.2M354.2 604.2A125 125 0 0 0 479.2 729.2C502.5 729.2 524.2 722.9 541.7 711.7L371.7 541.7C360.4 559.2 354.2 580.8 354.2 604.2Z",
+        "width": 1000
+      },
+      "search": [
+        "file-cancel-outline"
+      ]
     }
   ]
 }
